--- a/views/center/apa/apaTable.ejs
+++ b/views/center/apa/apaTable.ejs
@@ -8,13 +8,13 @@
         <th>কর্মসম্পাদন সূচক</th>
         <th>একক</th>
         <th>কর্মসম্পাদন সূচক এর মান</th>
-        <th>প্রকৃত অর্জন(২০১৭-১৮)</th>
         <th>প্রকৃত অর্জন(২০১৮-১৯)</th>
-        <th>লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (অসাধারণ ১০০%)</th>
-        <th>লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (অতি উত্তম ৯০%)</th>
-        <th>লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (উত্তম ৮০%)</th>
-        <th>লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (চলতি মান ৭০%)</th>
-        <th>লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (চলতি মানের নিম্নে ৬০%)</th>
+        <th>প্রকৃত অর্জন(বিগত অর্থবছর)</th>
+        <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অসাধারণ ১০০%)</th>
+        <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অতি উত্তম ৯০%)</th>
+        <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (উত্তম ৮০%)</th>
+        <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (চলতি মান ৭০%)</th>
+        <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (চলতি মানের নিম্নে ৬০%)</th>
         <th>প্রথম ত্রৈমাসিক অর্জন</th>
         <th>দ্বিতীয় ত্রৈমাসিক অর্জন</th>
     </tr>
@@ -52,13 +52,13 @@
             <th>কর্মসম্পাদন সূচক</th>
             <th>একক</th>
             <th>কর্মসম্পাদন সূচক এর মান</th>
-            <th>প্রকৃত অর্জন(২০১৭-১৮)</th>
             <th>প্রকৃত অর্জন(২০১৮-১৯)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (অসাধারণ ১০০%)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (অতি উত্তম ৯০%)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (উত্তম ৮০%)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (চলতি মান ৭০%)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (চলতি মানের নিম্নে ৬০%)</th>
+        <th>প্রকৃত অর্জন(বিগত অর্থবছর)</th>
+            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অসাধারণ ১০০%)</th>
+            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অতি উত্তম ৯০%)</th>
+            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (উত্তম ৮০%)</th>
+            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (চলতি মান ৭০%)</th>
+            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (চলতি মানের নিম্নে ৬০%)</th>
             <th>প্রথম ত্রৈমাসিক অর্জন</th>
             <th>দ্বিতীয় ত্রৈমাসিক অর্জন</th>
         </tr>
