--- a/views/center/expense/expenseForm.ejs
+++ b/views/center/expense/expenseForm.ejs
@@ -47,92 +47,92 @@
                                     
 
                                     <div class="form-group">
-                                        <label for="boraddo" class="col-md-3 control-label">২০১৮-১৯ অর্থ বছরের প্রাপ্ত বরাদ্দ</label>
+                                        <label for="boraddo" class="col-md-3 control-label">চলতি অর্থ বছরের প্রাপ্ত বরাদ্দ</label>
                                         <div class="col-md-9">
-                                            <input type="number" class="form-control" name="boraddo" placeholder="২০১৮-১৯ অর্থ বছরের প্রাপ্ত বরাদ্দ">
+                                            <input type="number" class="form-control" name="boraddo" placeholder="চলতি অর্থ বছরের প্রাপ্ত বরাদ্দ">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="july1" class="col-md-3 control-label">জুলাই/১৯</label>
+                                        <label for="july1" class="col-md-3 control-label">জুলাই</label>
                                         <div class="col-md-9">
-                                            <input type="number" class="form-control" name="july1" value="0" placeholder="জুলাই/১৯">
+                                            <input type="number" class="form-control" name="july1" value="0" placeholder="জুলাই">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="august1" class="col-md-3 control-label">আগস্ট/১৯</label>
+                                        <label for="august1" class="col-md-3 control-label">আগস্ট</label>
                                         <div class="col-md-9">
-                                        <input type="number" class="form-control" name="august1" value="0" placeholder="আগস্ট/১৯">
+                                        <input type="number" class="form-control" name="august1" value="0" placeholder="আগস্ট">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="sept1" class="col-md-3 control-label">সেপ্টে/১৯</label>
+                                        <label for="sept1" class="col-md-3 control-label">সেপ্টে</label>
                                         <div class="col-md-9">
-                                            <input type="number" class="form-control" name="sept1" value="0" placeholder="সেপ্টে/১৯">
+                                            <input type="number" class="form-control" name="sept1" value="0" placeholder="সেপ্টে">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="oct1" class="col-md-3 control-label">অক্টো/১৯</label>
+                                        <label for="oct1" class="col-md-3 control-label">অক্টো</label>
                                         <div class="col-md-9">
-                                            <input type="number" class="form-control" name="oct1" value="0" placeholder="অক্টো/১৯">
+                                            <input type="number" class="form-control" name="oct1" value="0" placeholder="অক্টো">
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="nov1" class="col-md-3 control-label">নভে/১৯</label>
+                                        <label for="nov1" class="col-md-3 control-label">নভে</label>
                                         <div class="col-md-9">
-                                            <input type="number" class="form-control" name="nov1" value="0" placeholder="নভে/১৯">
+                                            <input type="number" class="form-control" name="nov1" value="0" placeholder="নভে">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="dec1" class="col-md-3 control-label">ডিসে/১৯</label>
+                                        <label for="dec1" class="col-md-3 control-label">ডিসে</label>
                                         <div class="col-md-9">
-                                            <input type="number" class="form-control" name="dec1" value="0" placeholder="ডিসে/১৯">
+                                            <input type="number" class="form-control" name="dec1" value="0" placeholder="ডিসে">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="jan2" class="col-md-3 control-label">জানু/২০</label>
+                                        <label for="jan2" class="col-md-3 control-label">জানু</label>
                                         <div class="col-md-9">
-                                        <input type="number" class="form-control" name="jan2" value="0" placeholder="জানু/২০">
+                                        <input type="number" class="form-control" name="jan2" value="0" placeholder="জানু">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="feb2" class="col-md-3 control-label">ফেব্রু/২০</label>
+                                        <label for="feb2" class="col-md-3 control-label">ফেব্রু</label>
                                         <div class="col-md-9">
-                                            <input type="number" class="form-control" name="feb2" value="0" placeholder="ফেব্রু/২০">
+                                            <input type="number" class="form-control" name="feb2" value="0" placeholder="ফেব্রু">
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="march2" class="col-md-3 control-label">মার্চ/২০</label>
+                                        <label for="march2" class="col-md-3 control-label">মার্চ</label>
                                         <div class="col-md-9">
-                                            <input type="number" class="form-control" name="march2" value="0" placeholder="মার্চ/২০">
+                                            <input type="number" class="form-control" name="march2" value="0" placeholder="মার্চ">
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="apr2" class="col-md-3 control-label">এপ্রিল/২০</label>
+                                        <label for="apr2" class="col-md-3 control-label">এপ্রিল</label>
                                         <div class="col-md-9">
-                                            <input type="number" class="form-control" name="apr2" value="0" placeholder="এপ্রিল/২০">
+                                            <input type="number" class="form-control" name="apr2" value="0" placeholder="এপ্রিল">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="may2" class="col-md-3 control-label">মে/২০</label>
+                                        <label for="may2" class="col-md-3 control-label">মে</label>
                                         <div class="col-md-9">
-                                            <input type="number" class="form-control" name="may2" value="0" placeholder="মে/২০">
+                                            <input type="number" class="form-control" name="may2" value="0" placeholder="মে">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="june2" class="col-md-3 control-label">জুন/২০</label>
+                                        <label for="june2" class="col-md-3 control-label">জুন</label>
                                         <div class="col-md-9">
-                                        <input type="number" class="form-control" name="june2" value="0" placeholder="জুন/২০">
+                                        <input type="number" class="form-control" name="june2" value="0" placeholder="জুন">
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -143,16 +143,22 @@
                                     </div>
                                    
                                     <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">বছর</label>
                                         <div class="col-md-9">
-                                            <input type="number" class="form-control" name="year" placeholder="বছর">
+                                            <label for="year">বছর :</label>
+                                        <select id="year" name="year" required>
+                                            <option value="2017">২০১৭-১৮</option>
+                                            <option value="2018">২০১৮-১৯</option>
+                                            <option value="2019">২০১৯-২০</option>
+                                            <option value="2020">২০২০-২১</option>
+                                            <option value="2021">২০২১-২২</option>
+                                            <option value="2022">২০২২-২৩</option>
+                                        </select>
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="user_id" class="col-md-3 control-label">userid</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="user_id" placeholder="user_id" value="<%= user_id %>" >
+                                            <input type="hidden" class="form-control" name="user_id" placeholder="user_id" value="<%= user_id %>" >
                                         </div>
                                     </div>
                                     
