--- a/views/center/expense/expenseTable.ejs
+++ b/views/center/expense/expenseTable.ejs
@@ -3,24 +3,24 @@
     <thead>
     <tr>
         <th>কোড নং</th>
-        <th>খাতের নাম</th>
-        <th>২০১৮-১৯ অর্থ বছরের প্রাপ্ত বরাদ্দ</th>
-        <th>জুলাই/১৯</th>
-        <th>আগস্ট/১৯</th>
-        <th>সেপ্টে/১৯</th>
-        <th>অক্টো/১৯</th>
-        <th>নভে/১৯</th>
-        <th>ডিসে/১৯</th>
-        <th>জানু/২০</th>
-        <th>ফেব্রু/২০</th>
-        <th>মার্চ/২০</th>
-        <th>এপ্রিল/২০</th>
-        <th>মে/২০</th>
-        <th>জুন/২০</th>
-        <th>মোট খরচ</th>
-        <th>অবশিষ্ট</th>
-        <th>মন্তব্য অতিরিক্ত খরচ বেতন</th>
-        <th>যোগ করুন</th>
+            <th>খাতের নাম</th>
+            <th>চলতি অর্থ বছরের প্রাপ্ত বরাদ্দ</th>
+            <th>জুলাই</th>
+            <th>আগস্ট</th>
+            <th>সেপ্টে</th>
+            <th>অক্টো</th>
+            <th>নভে</th>
+            <th>ডিসে</th>
+            <th>জানু</th>
+            <th>ফেব্রু</th>
+            <th>মার্চ</th>
+            <th>এপ্রিল</th>
+            <th>মে</th>
+            <th>জুন</th>
+            <th>মোট খরচ</th>
+            <th>অবশিষ্ট</th>
+            <th>মন্তব্য অতিরিক্ত খরচ বেতন</th>
+            <th>যোগ করুন</th>
     </tr>
     </thead>
     <tbody>
@@ -59,19 +59,19 @@
         <tr>
             <th>কোড নং</th>
             <th>খাতের নাম</th>
-            <th>২০১৮-১৯ অর্থ বছরের প্রাপ্ত বরাদ্দ</th>
-            <th>জুলাই/১৯</th>
-            <th>আগস্ট/১৯</th>
-            <th>সেপ্টে/১৯</th>
-            <th>অক্টো/১৯</th>
-            <th>নভে/১৯</th>
-            <th>ডিসে/১৯</th>
-            <th>জানু/২০</th>
-            <th>ফেব্রু/২০</th>
-            <th>মার্চ/২০</th>
-            <th>এপ্রিল/২০</th>
-            <th>মে/২০</th>
-            <th>জুন/২০</th>
+            <th>চলতি অর্থ বছরের প্রাপ্ত বরাদ্দ</th>
+            <th>জুলাই</th>
+            <th>আগস্ট</th>
+            <th>সেপ্টে</th>
+            <th>অক্টো</th>
+            <th>নভে</th>
+            <th>ডিসে</th>
+            <th>জানু</th>
+            <th>ফেব্রু</th>
+            <th>মার্চ</th>
+            <th>এপ্রিল</th>
+            <th>মে</th>
+            <th>জুন</th>
             <th>মোট খরচ</th>
             <th>অবশিষ্ট</th>
             <th>মন্তব্য অতিরিক্ত খরচ বেতন</th>
