--- a/views/pd/dashboard.ejs
+++ b/views/pd/dashboard.ejs
@@ -269,6 +269,17 @@
                                         </div>
                                 </div>
                             </form>
+                            <div class="col">
+                                            <% rajosshoCodes.forEach((row) => {
+                                            
+                                            %>
+                                                <span style="margin-right: 2px"> <%= row.upokhat %> </span> |
+                                            <%
+                                            
+                                            })
+                                            %>
+                                        </div>
+                            </div>
                             </div>
                         </div>
 
@@ -289,6 +300,16 @@
                                         </div>
                                 </div>
                             </form>
+                            <div class="col">
+                                            <% expenseCodes.forEach((row) => {
+                                            
+                                            %>
+                                                <span style="margin-right: 2px"> <%= row.khat %> </span> |
+                                            <%
+                                            
+                                            })
+                                            %>
+                                        </div>
                             </div>
                         </div>
 
