--- a/views/pd/loan/loanTable.ejs
+++ b/views/pd/loan/loanTable.ejs
@@ -3,12 +3,12 @@
     <thead>
     <tr>
         <th>ঋণ বাবদ বরাদ্দ অর্থ</th>
-        <th>বিতরণকৃত অর্থের পরিমাণ(২০০৪-০৫)</th>
-        <th>আদায়কৃত টাকার পরিমাণ(২০০৪-০৫)</th>
-        <th>অবশিষ্ট টাকার পরিমাণ(২০০৪-০৫)</th>
-        <th>বিতরণকৃত অর্থের পরিমাণ(২০০৫-০৬)</th>
-        <th>আদায়কৃত টাকার পরিমাণ(২০০৫-০৬)</th>
-        <th>অবশিষ্ট টাকার পরিমাণ(২০০৫-০৬)</th>
+        <th>বিগত অর্থবছরে বিতরণকৃত অর্থের পরিমাণ</th>
+        <th>বিগত অর্থবছরে আদায়কৃত টাকার পরিমাণ</th>
+        <th>বিগত অর্থবছরে অবশিষ্ট টাকার পরিমাণ</th>
+        <th>চলতি অর্থবছরে বিতরণকৃত অর্থের পরিমাণ</th>
+        <th>চলতি অর্থবছরে আদায়কৃত টাকার পরিমাণ</th>
+        <th>চলতি অর্থবছরে অবশিষ্ট টাকার পরিমাণ</th>
         <th>মন্তব্য</th>
     </tr>
     </thead>
@@ -33,12 +33,12 @@
         <thead>
         <tr>
             <th>ঋণ বাবদ বরাদ্দ অর্থ</th>
-            <th>বিতরণকৃত অর্থের পরিমাণ(২০০৪-০৫)</th>
-            <th>আদায়কৃত টাকার পরিমাণ(২০০৪-০৫)</th>
-            <th>অবশিষ্ট টাকার পরিমাণ(২০০৪-০৫)</th>
-            <th>বিতরণকৃত অর্থের পরিমাণ(২০০৫-০৬)</th>
-            <th>আদায়কৃত টাকার পরিমাণ(২০০৫-০৬)</th>
-            <th>অবশিষ্ট টাকার পরিমাণ(২০০৫-০৬)</th>
+            <th>বিগত অর্থবছরে বিতরণকৃত অর্থের পরিমাণ</th>
+            <th>বিগত অর্থবছরে আদায়কৃত টাকার পরিমাণ</th>
+            <th>বিগত অর্থবছরে অবশিষ্ট টাকার পরিমাণ</th>
+            <th>চলতি অর্থবছরে বিতরণকৃত অর্থের পরিমাণ</th>
+            <th>চলতি অর্থবছরে আদায়কৃত টাকার পরিমাণ</th>
+            <th>চলতি অর্থবছরে অবশিষ্ট টাকার পরিমাণ</th>
             <th>মন্তব্য</th>
         </tr>
         </thead>
