--- a/views/pd/rajossho/rajosshoTable.ejs
+++ b/views/pd/rajossho/rajosshoTable.ejs
@@ -4,18 +4,18 @@
     <tr>
         <th>অর্থনৈতিক কোড নং</th>
         <th>উপ-খাতের নাম</th>
-        <th>জুলাই/১৯</th>
-        <th>আগস্ট/১৯</th>
-        <th>সেপ্টে/১৯</th>
-        <th>অক্টো/১৯</th>
-        <th>নভে/১৯</th>
-        <th>ডিসে/১৯</th>
-        <th>জানু/২০</th>
-        <th>ফেব্রু/২০</th>
-        <th>মার্চ/২০</th>
-        <th>এপ্রিল/২০</th>
-        <th>মে/২০</th>
-        <th>জুন/২০</th>
+        <th>জুলাই</th>
+            <th>আগস্ট</th>
+            <th>সেপ্টে</th>
+            <th>অক্টো</th>
+            <th>নভে</th>
+            <th>ডিসে</th>
+            <th>জানু</th>
+            <th>ফেব্রু</th>
+            <th>মার্চ</th>
+            <th>এপ্রিল</th>
+            <th>মে</th>
+            <th>জুন</th>
         <th>সর্বমোট</th>
     </tr>
     </thead>
@@ -50,18 +50,18 @@
         <tr>
             <th>অর্থনৈতিক কোড নং</th>
             <th>উপ-খাতের নাম</th>
-            <th>জুলাই/১৯</th>
-            <th>আগস্ট/১৯</th>
-            <th>সেপ্টে/১৯</th>
-            <th>অক্টো/১৯</th>
-            <th>নভে/১৯</th>
-            <th>ডিসে/১৯</th>
-            <th>জানু/২০</th>
-            <th>ফেব্রু/২০</th>
-            <th>মার্চ/২০</th>
-            <th>এপ্রিল/২০</th>
-            <th>মে/২০</th>
-            <th>জুন/২০</th>
+            <th>জুলাই</th>
+            <th>আগস্ট</th>
+            <th>সেপ্টে</th>
+            <th>অক্টো</th>
+            <th>নভে</th>
+            <th>ডিসে</th>
+            <th>জানু</th>
+            <th>ফেব্রু</th>
+            <th>মার্চ</th>
+            <th>এপ্রিল</th>
+            <th>মে</th>
+            <th>জুন</th>
             <th>সর্বমোট</th>
         </tr>
         </thead>
