--- a/views/center/apa/apaForm.ejs
+++ b/views/center/apa/apaForm.ejs
@@ -6,7 +6,7 @@
               <div class="main-content">
                 <div class="container-fluid">
                     <div class="row clearfix">
-                    <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+                    <div id="signupbox" style="margin-top:50px" class="mainbox col-md-12 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="panel panel-info">
                             <div class="panel-heading">
                                 <div class="panel-title"><h2>এপিএ ফর্ম</h2></div>
@@ -24,7 +24,7 @@
                                     </div>
 
                                      
-                                    <div class="form-row">
+                                    <div class="form-row mb-4">
                                         <div class="col">
                                             <label for="uddessho" class="col control-label">কৌশলগত উদ্দেশ্য</label>
                                             <select name="uddessho" id="uddessho" class="form-control">
@@ -77,9 +77,9 @@
                                     
                                     
                                     <div class="form-group">
-                                        <label for="achievement1" class="col-md-3 control-label">প্রকৃত অর্জন(২০১৭-১৮)</label>
+                                        <label for="achievement1" class="col-md-3 control-label">প্রকৃত অর্জন(বিগত অর্থবছর)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="achievement1" placeholder="প্রকৃত অর্জন(২০১৭-১৮)">
+                                            <input type="text" class="form-control" name="achievement1" placeholder="প্রকৃত অর্জন(বিগত অর্থবছর)">
                                         </div>
                                     </div>
 
@@ -91,37 +91,37 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="best" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (অসাধারণ ১০০%)</label>
+                                        <label for="best" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (অসাধারণ ১০০%)</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="best" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (অসাধারণ ১০০%)">
+                                        <input type="text" class="form-control" name="best" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (অসাধারণ ১০০%)">
                                         </div>
                                     </div>
                                    
                                     <div class="form-group">
-                                        <label for="otiUttam" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (অতি উত্তম ৯০%)</label>
+                                        <label for="otiUttam" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (অতি উত্তম ৯০%)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="otiUttam" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (অতি উত্তম ৯০%)">
+                                            <input type="text" class="form-control" name="otiUttam" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (অতি উত্তম ৯০%)">
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="uttam" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (উত্তম ৮০%)</label>
+                                        <label for="uttam" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (উত্তম ৮০%)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="uttam" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (উত্তম ৮০%)">
+                                            <input type="text" class="form-control" name="uttam" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (উত্তম ৮০%)">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="cholti" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (চলতি মান ৭০%)</label>
+                                        <label for="cholti" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (চলতি মান ৭০%)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="cholti" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (চলতি মান ৭০%)">
+                                            <input type="text" class="form-control" name="cholti" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (চলতি মান ৭০%)">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="below" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (চলতি মানের নিম্নে ৬০%)</label>
+                                        <label for="below" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (চলতি মানের নিম্নে ৬০%)</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="below" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক ২০১৯-২০ (চলতি মানের নিম্নে ৬০%)">
+                                        <input type="text" class="form-control" name="below" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (চলতি মানের নিম্নে ৬০%)">
                                         </div>
                                     </div>
 
@@ -139,16 +139,22 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">বছর</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="year" placeholder="বছর">
+                                            <label for="year">বছর :</label>
+                                        <select id="year" name="year" required>
+                                            <option value="2017">২০১৭-১৮</option>
+                                            <option value="2018">২০১৮-১৯</option>
+                                            <option value="2019">২০১৯-২০</option>
+                                            <option value="2020">২০২০-২১</option>
+                                            <option value="2021">২০২১-২২</option>
+                                            <option value="2022">২০২২-২৩</option>
+                                        </select>
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">userid</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>" >
+                                            <input type="hidden" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>" >
                                         </div>
                                     </div>
                                     
