--- a/views/center/loan/loanForm.ejs
+++ b/views/center/loan/loanForm.ejs
@@ -32,44 +32,44 @@
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="bitoron1" class="col-md-3 control-label">বিতরণকৃত অর্থের পরিমাণ(২০০৪-০৫)</label>
+                                        <label for="bitoron1" class="col-md-3 control-label">বিগত অর্থবছরে বিতরণকৃত অর্থের পরিমাণ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="bitoron1" placeholder="বিতরণকৃত অর্থের পরিমাণ(২০০৪-০৫)">
+                                            <input type="text" class="form-control" name="bitoron1" placeholder="বিগত অর্থবছরে বিতরণকৃত অর্থের পরিমাণ">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="aday1" class="col-md-3 control-label">আদায়কৃত টাকার পরিমাণ(২০০৪-০৫)</label>
+                                        <label for="aday1" class="col-md-3 control-label">বিগত অর্থবছরে আদায়কৃত টাকার পরিমাণ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="aday1" placeholder="আদায়কৃত টাকার পরিমাণ(২০০৪-০৫)">
+                                            <input type="text" class="form-control" name="aday1" placeholder="বিগত অর্থবছরে আদায়কৃত টাকার পরিমাণ">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="left1" class="col-md-3 control-label">অবশিষ্ট টাকার পরিমাণ(২০০৪-০৫)</label>
+                                        <label for="left1" class="col-md-3 control-label">বিগত অর্থবছরে অবশিষ্ট টাকার পরিমাণ</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="left1" placeholder="অবশিষ্ট টাকার পরিমাণ(২০০৪-০৫)">
+                                        <input type="text" class="form-control" name="left1" placeholder="বিগত অর্থবছরে অবশিষ্ট টাকার পরিমাণ">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="bitoron2" class="col-md-3 control-label">বিতরণকৃত অর্থের পরিমাণ(২০০৫-০৬)</label>
+                                        <label for="bitoron2" class="col-md-3 control-label">চলতি অর্থবছরে বিতরণকৃত অর্থের পরিমাণ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="bitoron2" placeholder="বিতরণকৃত অর্থের পরিমাণ(২০০৫-০৬)">
+                                            <input type="text" class="form-control" name="bitoron2" placeholder="চলতি অর্থবছরে বিতরণকৃত অর্থের পরিমাণ">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="aday2" class="col-md-3 control-label">আদায়কৃত টাকার পরিমাণ(২০০৫-০৬)</label>
+                                        <label for="aday2" class="col-md-3 control-label">চলতি অর্থবছরে আদায়কৃত টাকার পরিমাণ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="aday2" placeholder="আদায়কৃত টাকার পরিমাণ(২০০৫-০৬)">
+                                            <input type="text" class="form-control" name="aday2" placeholder="চলতি অর্থবছরে আদায়কৃত টাকার পরিমাণ">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="left2" class="col-md-3 control-label">অবশিষ্ট টাকার পরিমাণ(২০০৫-০৬)</label>
+                                        <label for="left2" class="col-md-3 control-label">চলতি অর্থবছরে অবশিষ্ট টাকার পরিমাণ</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="left2" placeholder="অবশিষ্ট টাকার পরিমাণ(২০০৫-০৬)">
+                                        <input type="text" class="form-control" name="left2" placeholder="চলতি অর্থবছরে অবশিষ্ট টাকার পরিমাণ">
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -79,16 +79,22 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">বছর</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="year" placeholder="বছর">
+                                            <label for="year">বছর :</label>
+                                        <select id="year" name="year" required>
+                                            <option value="2017">২০১৭-১৮</option>
+                                            <option value="2018">২০১৮-১৯</option>
+                                            <option value="2019">২০১৯-২০</option>
+                                            <option value="2020">২০২০-২১</option>
+                                            <option value="2021">২০২১-২২</option>
+                                            <option value="2022">২০২২-২৩</option>
+                                        </select>
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">userid</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>" >
+                                            <input type="hidden" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>" >
                                         </div>
                                     </div>
                                     
