--- a/views/center/rajossho/rajosshoAdd.ejs
+++ b/views/center/rajossho/rajosshoAdd.ejs
@@ -54,9 +54,8 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">userid</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="user_id" placeholder="id" value="<%=records.center_id%>" >
+                                            <input type="hidden" class="form-control" name="user_id" placeholder="id" value="<%=records.center_id%>" >
                                         </div>
                                     </div>
                                     
