--- a/views/center/topSheet/topSheetForm.ejs
+++ b/views/center/topSheet/topSheetForm.ejs
@@ -68,9 +68,8 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">userid</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>" >
+                                            <input type="hidden" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>" >
                                         </div>
                                     </div>
                                     
