--- a/views/center/rajossho/rajosshoAdd.ejs
+++ b/views/center/rajossho/rajosshoAdd.ejs
@@ -47,9 +47,8 @@
                                     </div>
                                    
                                     <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">বছর</label>
                                         <div class="col-md-9">
-                                            <input type="number" class="form-control" name="year" placeholder="বছর" value="<%=records.year%>">
+                                            <input type="hidden" class="form-control" name="year" placeholder="বছর" value="<%=records.year%>">
                                         </div>
                                     </div>
 
