--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -75,9 +75,9 @@
                 </div>
                     
                     
-                        <div class="nav-item ">
+                        <!-- <div class="nav-item ">
                             <a href="/pd/center"><i class="ik ik-gitlab"></i><span>সেন্টার ইনফরমেশন</span> </a>
-                        </div>
+                        </div> -->
                     
                    
                     <div class="nav-lavel">এপিএ</div>
