excel and others

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,12 +42,15 @@
     ================================================== -->
     <header class="s-header">
 
-        <div class="header-logo">
+        <!-- <div class="header-logo">
             <a class="site-logo" href="/">
                 <img src="landingPage/images/logo.png" alt="Homepage">
             </a>
+            <a class="site-logo" href="/">
+                <img src="landingPage/images/bdlogo.png" alt="Homepage">
+            </a>
         </div>
-
+         -->
         <nav class="header-nav">
 
             <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
@@ -76,22 +79,31 @@
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="landingPage/images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="landingPage/images/hero-bg6.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
 
         <div class="home-content">
-
+            
             <div class="row home-content__main">
-
-                <h3 class="text-center">হর্টিকালচার উইং এ স্বাগতম</h3>
-
-                <h1>
+                <div class="row text-center">
+            
+                        <a href="/">
+                            <img src="landingPage/images/dae.png" alt="Homepage" width="80px">
+                        </a>
+                        <a class="text-center" href="/">
+                            <img src="landingPage/images/bdlogo.png" alt="Homepage" width="80px">
+                        </a>
+                        
+                </div>
+               
+                <h1 class="text-center">হর্টিকালচার উইং এর সেন্টার ম্যানেজমেন্ট সফটওয়্যারে আপনাকে স্বাগতম</h1>
+                <h3>
                     দেশের ১৬ কোটি মানুষের খাদ্য নিরাপত্তা নিশ্চিতকরন ও পুষ্টি সমস্যা সমাধান, মানব সম্পদ উন্নয়ন, কর্মসংস্থান সৃষ্টি, দারিদ্র দূরীকরণ, নারীর ক্ষমতায়ন, জলবায়ুর বিরূপ প্রভাব মোকাবেলায় লাগসই প্রযুক্তি প্রয়োগ, পরিবেশ বান্ধব কৃষি, উচ্চ মূল্য ফসল উৎপাদন ও রপ্তানীমুখী কৃষি পন্য উৎপাদনে কৃষক ও উদ্যোক্তাদের চাহিদামাফিক সেবা প্রদানের লক্ষে গণপ্রজাতন্ত্রী বাংলাদেশ সরকারের কৃষি মন্ত্রনালয়ের আওতাধীন কৃষি সম্প্রসারণ অধিদপ্তরের হর্টিকালচার উইং সুনির্দিষ্ট কর্মপকিল্পনা নিয়ে কাজ করে যাচ্ছে। <br>
-                </h1>
+                </h3>
 
-                <div class="home-content__buttons">
+                <div class="home-content__buttons" style="text-align: center;">
                     <a href="/pd/login" class=" btn btn--stroke">
                         Admin Login
                     </a>
