--- a/views/pd/dashboard.ejs
+++ b/views/pd/dashboard.ejs
@@ -76,7 +76,7 @@
                         <select id="center" class="form-control">
                             <option value="all">সব  সেন্টার</option>
                             <% center.forEach((row) => { %>
-                                <option value="<%= row.id %>"> <%= row.uname %> </option>
+                                <option value="<%= row.id %>"> <%= row.center %> </option>
                             <%  }) %>
                         </select>
                     </div>
