--- a/views/pd/rajossho/rajosshoTable.ejs
+++ b/views/pd/rajossho/rajosshoTable.ejs
@@ -1,5 +1,5 @@
 <%if (records.length >0){ %>
-    <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+    <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
     <thead>
     <tr>
         <th>অর্থনৈতিক কোড নং</th>
@@ -17,6 +17,8 @@
             <th>মে</th>
             <th>জুন</th>
         <th>সর্বমোট</th>
+        <th>পরিবর্তন/মুছুন</th>
+
     </tr>
     </thead>
     <tbody>
@@ -37,7 +39,9 @@
                 <td><%= row.may2 %></td>
                 <td><%= row.june2 %></td>
                 <td><%= row.total %></td>
-                
+                <td><a class="btn btn-primary btn-xs" href="/pd/rajosshoEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                    <a class="btn btn-danger btn-xs" href="/pd/rajosshoDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                </td>
                 
                
             </tr>
