--- a/views/center/employee/chak2/employeeChak2Form.ejs
+++ b/views/center/employee/chak2/employeeChak2Form.ejs
@@ -65,6 +65,25 @@
                                         </div>
                                     </div>
 
+                                    <div class="form-group">
+                                        <div class="col-md-9">
+                                            <label for="month">মাস :</label>
+                                        <select id="month" name="month" required>
+                                            <option value="january">জানুয়ারি</option>
+                                            <option value="february">ফেব্রুয়ারি</option>
+                                            <option value="march">মার্চ</option>
+                                            <option value="april">এপ্রিল</option>
+                                            <option value="may">মে</option>
+                                            <option value="june">জুন</option>
+                                            <option value="july">জুলাই</option>
+                                            <option value="august">আগস্ট</option>
+                                            <option value="september">সেপ্টেম্বর</option>
+                                            <option value="october">অক্টোবর</option>
+                                            <option value="november">নভেম্বর</option>
+                                            <option value="december">ডিসেম্বর</option>
+                                        </select>
+                                        </div>
+                                    </div>
                                    
                                     <div class="form-group">
                                         <div class="col-md-9">
