--- a/views/center/worker/irregularWorker/irregularWorker.ejs
+++ b/views/center/worker/irregularWorker/irregularWorker.ejs
@@ -1,3 +1,4 @@
+
 <%- include('../../../includes/header')-%>
         <div id="wrapper" class="wrapper" >
             <%- include('../../../includes/topbar')-%>
@@ -9,21 +10,51 @@
                             <div class="col-md-10">
                                 <h1 class="text-center"><%= title %></h1>
                             </div>
-                            <div class="col-md-2">
-                                <label for="year">Choose a year:</label>
+                        </div>
 
-                                <select id="year" name="year">
-                                    <option value="">Choose year</option>
-                                    <option value="2017">২০১৭-১৮</option>
-                                    <option value="2018">২০১৮-১৯</option>
-                                    <option value="2019">২০১৯-২০</option>
-                                    <option value="2020" selected>২০২০-২১</option>
-                                    <option value="2021">২০২১-২২</option>
-                                    <option value="2022">২০২২-২৩</option>
-                                    <option value="2023">২০২৩-২৪</option>
-                                </select>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="row clearfix">
+                                    <div class="col-md-4">
+                                        <label for="month">মাস:</label>
+                                        <select id="month" name="month">
+                                            <option value="january">জানুয়ারি</option>
+                                            <option value="february">ফেব্রুয়ারি</option>
+                                            <option value="march">মার্চ</option>
+                                            <option value="april">এপ্রিল</option>
+                                            <option value="may">মে</option>
+                                            <option value="june">জুন</option>
+                                            <option value="july">জুলাই</option>
+                                            <option value="august">আগস্ট</option>
+                                            <option value="september">সেপ্টেম্বর</option>
+                                            <option value="october">অক্টোবর</option>
+                                            <option value="november">নভেম্বর</option>
+                                            <option value="december">ডিসেম্বর</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <label for="year">Choose a year:</label>
+                                        <select id="year" name="year">
+                                            <option value="">Choose year</option>
+                                            <option value="2017">২০১৭-১৮</option>
+                                            <option value="2018">২০১৮-১৯</option>
+                                            <option value="2019">২০১৯-২০</option>
+                                            <option value="2020" selected>২০২০-২১</option>
+                                            <option value="2021">২০২১-২২</option>
+                                            <option value="2022">২০২২-২৩</option>
+                                            <option value="2023">২০২৩-২৪</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <!-- Button -->                                        
+                                        <div>
+                                        <input type="submit" id="submit" name="submit" value="submit" class="btn btn-primary">   
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                        
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <a href="/center/irregularWorkerForm" class="btn btn-success btn-group-sm ">অনিয়মিত শ্রমিকের তথ্য ফর্ম</a>
@@ -77,10 +108,12 @@
     $("#wrapper").load( "no url rn",function() {
         
         var year = new Date().getFullYear();
+        var month = $('#month').val();
+
         $.ajax({
             type: "POST",
             url: "/center/irregularWorkerYear",
-            data: {year: year},
+            data: {year: year,month: month},
             datatype: "json",
             beforeSend: function() {
                 // setting a timeout
@@ -99,12 +132,13 @@
         });
     });
 
-    $('#year').on("change",function () {
+    $('#submit').on("click",function () {
         var year = $('#year').val();
+        var month = $('#month').val();
         $.ajax({
             type: "POST",
             url: "/center/irregularWorkerYear",
-            data: {year: year},
+            data: {year: year,month:month},
             datatype: "json",
             beforeSend: function() {
                 // setting a timeout
