--- a/views/center/worker/regularWorker/regularWorkerForm.ejs
+++ b/views/center/worker/regularWorker/regularWorkerForm.ejs
@@ -34,7 +34,7 @@
                                     <div class="form-group">
                                         <label for="date" class="col-md-3 control-label">সেন্টারে যোগদানের তারিখ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="date" placeholder="সেন্টারে যোগদানের তারিখ">
+                                            <input type="date" class="form-control" name="date" placeholder="সেন্টারে যোগদানের তারিখ">
                                         </div>
                                     </div>
 
@@ -45,6 +45,25 @@
                                         </div>
                                     </div>
 
+                                    <div class="form-group">
+                                        <div class="col-md-9">
+                                            <label for="month">মাস :</label>
+                                        <select id="month" name="month" required>
+                                            <option value="january">জানুয়ারি</option>
+                                            <option value="february">ফেব্রুয়ারি</option>
+                                            <option value="march">মার্চ</option>
+                                            <option value="april">এপ্রিল</option>
+                                            <option value="may">মে</option>
+                                            <option value="june">জুন</option>
+                                            <option value="july">জুলাই</option>
+                                            <option value="august">আগস্ট</option>
+                                            <option value="september">সেপ্টেম্বর</option>
+                                            <option value="october">অক্টোবর</option>
+                                            <option value="november">নভেম্বর</option>
+                                            <option value="december">ডিসেম্বর</option>
+                                        </select>
+                                        </div>
+                                    </div>
                                    
                                     <div class="form-group">
                                         <div class="col-md-9">
