--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -17,6 +17,15 @@
                     <div class="nav-item active">
                         <a href="/pd/dashboard"><i class="ik ik-bar-chart-2"></i><span>ড্যাশবোর্ড</span></a>
                     </div>
+                    <div class="nav-item ">
+                        <a href="/pd/center"><i class="ik ik-gitlab"></i><span>সেন্টার ইনফরমেশন</span> </a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="/pd/newRajosshoCodeTable"><i class="ik ik-command"></i><span>রাজস্ব প্রাপ্তির কোডসমূহ</span></a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="/pd/newKhorochTable"><i class="ik ik-command"></i><span>খরচের (বিএস্টেটমেন্ট) কোডসমূহ</span></a>
+                    </div>
                    
                     <div class="nav-lavel">প্রতিবেদন</div>
                     <div class="nav-item">
@@ -37,6 +46,7 @@
                     <div class="nav-item">
                         <a href="/pd/loan"><i class="ik ik-gitlab"></i><span>লোন বিতরণ রিপোর্টিং</span> </a>
                     </div>
+                    
                     
                     <div class="nav-lavel">চারা কলম মূল্য তালিকা</div>
                         <div class="nav-item">
@@ -60,10 +70,10 @@
 
                     <div class="nav-lavel">কর্মকতা/কর্মচারীদের ডাটাবেজ</div>
                         <div class="nav-item">
-                            <a href="/pd/chak2"><i class="ik ik-package"></i><span>কর্মকতা/কর্মচারীদের তথ্য</span></a>
+                            <a href="/pd/chak1"><i class="ik ik-package"></i><span>কর্মকতা/কর্মচারীদের তথ্য</span></a>
                         </div>
                         <div class="nav-item">
-                            <a href="/pd/chak1"><i class="ik ik-box"></i><span>কর্মকতা/কর্মচারীদের <br>পদের সংখ্যা</span></a>
+                            <a href="/pd/chak2"><i class="ik ik-box"></i><span>কর্মকতা/কর্মচারীদের <br>পদের সংখ্যা</span></a>
                         </div>
 
                 <div class="nav-lavel">শ্রমিকদের ডাটাবেজ</div>
@@ -73,11 +83,8 @@
                 <div class="nav-item">
                     <a href="/pd/irregularWorker"><i class="ik ik-box"></i><span>অনিয়মিত শ্রমিকদের তথ্য</span></a>
                 </div>
-                    
-                    
-<!--                        <div class="nav-item ">-->
-<!--                            <a href="/pd/center"><i class="ik ik-gitlab"></i><span>সেন্টার ইনফরমেশন</span> </a>-->
-<!--                        </div>-->
+
+                
                     
                    
                     <div class="nav-lavel">এপিএ</div>
