--- a/views/pd/centerInfo/center.ejs
+++ b/views/pd/centerInfo/center.ejs
@@ -9,7 +9,7 @@
                         <div class="col-md-10">
                             <h1 class="text-center"><%= title %></h1>
                         </div>
-                        <div class="col-md-2">
+                        <!-- <div class="col-md-2">
                             <label for="year">Choose a year:</label>
 
                             <select id="year" name="year">
@@ -22,16 +22,66 @@
                                 <option value="2022">২০২২-২৩</option>
                                 <option value="2023">২০২৩-২৪</option>
                             </select>
-                        </div>
+                        </div> -->
                     </div>
-                    <div class="row mb-2">
+                    <!-- <div class="row mb-2">
                         <div class="col-md-12">
                             <a href="/pd/centerForm" class="btn btn-success btn-group-sm ">সেন্টারের যোগাযোগ তথ্য</a>
                         </div>
 
-                    </div>
+                    </div> -->
 
                      <div class="table-responsive" id="output">
+                        <%if (records.length >0){ %>
+                            <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+                            <thead>
+                            <tr>
+                                <th>সেন্টারের নাম</th>
+                                <th>কর্মকর্তার নাম</th>
+                                <th>পদবী</th>
+                                <th>মোবাইল নং</th>
+                                <th>ই-মেইল</th>
+                                <th>পরিবর্তন/মুছুন</th>
+
+                            </tr>
+                            </thead>
+                            <tbody>
+                                <% records.forEach(function(row){ %>
+                                    <tr>
+                                        <td><%= row.center %></td>
+                                        <td><%= row.kormokorta %></td>
+                                        <td><%= row.podobi %></td>
+                                        <td><%= row.mobile %></td>
+                                        <td><%= row.email %></td>
+                                        
+                                        <td><a class="btn btn-primary btn-xs" href="/pd/centerEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                                            <a class="btn btn-danger btn-xs" href="/pd/centerDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                                        </td> 
+                                       
+                                    </tr>
+                                <% }) %>
+                            </tbody>
+                        </table>
+                        <% }else{ %>
+                            <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+                                <thead>
+                                <tr>
+                                    <th>সেন্টারের নাম</th>
+                                    <th>কর্মকর্তার নাম</th>
+                                    <th>পদবী</th>
+                                    <th>মোবাইল নং</th>
+                                    <th>ই-মেইল</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <% records.forEach(function(row){ %>
+                                    <tr>
+                                        <td colspan="10">No data Found</td>
+                                    </tr>
+                                <% }) %>
+                                </tbody>
+                            </table>
+                        <% } %>
 
                     </div>
 
@@ -47,7 +97,7 @@
 
     <%- include('../../includes/footer')-%>
 
-    <script>
+    <!-- <script>
         
         $(document).ready(function(){
             
@@ -130,4 +180,4 @@
     
         
     
-    </script>
+    </script> -->
