--- a/views/pd/topSheet/topSheet.ejs
+++ b/views/pd/topSheet/topSheet.ejs
@@ -15,7 +15,7 @@
                                     <option value="">Choose center</option>
                                     <% if (centers.length >0){ %>
                                         <% centers.forEach(function (center) { %>
-                                            <option value="<%= center.id %>"><%= center.uname %></option>
+                                            <option value="<%= center.id %>"><%= center.center %></option>
                                         <% }) %>
                                     <% } %>
                                 </select>
@@ -35,6 +35,8 @@
                         <div class="table-responsive" id="output"></div>
 
                         <input type="button" id="btnExport" value="Download PDF" />
+                        <button onclick="exportToExcel('tblexportData', 'টপশীট')" class="btn btn-success">Export Table Data To Excel File</button>
+
 
                         <div id="output"></div>
         <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
@@ -46,6 +48,39 @@
 
    
 <%- include('../../includes/footer')-%>
+<script type="text/javascript">
+    function exportToExcel(tableID, filename = ''){
+        var downloadurl;
+        var dataFileType = 'application/vnd.ms-excel';
+        var tableSelect = document.getElementById(tableID);
+        var tableHTMLData = tableSelect.outerHTML.replace(/ /g, '%20');
+        
+        // Specify file name
+        filename = filename?filename+'.xls':'export_excel_data.xls';
+        
+        // Create download link element
+        downloadurl = document.createElement("a");
+        
+        document.body.appendChild(downloadurl);
+        
+        if(navigator.msSaveOrOpenBlob){
+            var blob = new Blob(['\ufeff', tableHTMLData], {
+                type: dataFileType
+            });
+            navigator.msSaveOrOpenBlob( blob, filename);
+        }else{
+            // Create a link to the file
+            downloadurl.href = 'data:' + dataFileType + ', ' + tableHTMLData;
+        
+            // Setting the file name
+            downloadurl.download = filename;
+            
+            //triggering the function
+            downloadurl.click();
+        }
+    }
+     
+    </script>
 <script>
         
     $(document).ready(function(){
