--- a/views/pd/worker/regularWorker/regularWorker.ejs
+++ b/views/pd/worker/regularWorker/regularWorker.ejs
@@ -9,33 +9,59 @@
                             <div class="col-md-10">
                                 <h1 class="text-center"><%= title %></h1>
                             </div>
-                            <div class="col-md-4">
-                                <label >Choose a Center:</label>
-                                <select id="center" name="center" required>
-                                    <option value="">Choose center</option>
-                                    <% if (centers.length >0){ %>
-                                        <% centers.forEach(function (center) { %>
-                                            <option value="<%= center.id %>"><%= center.uname %></option>
-                                        <% }) %>
-                                    <% } %>
-                                </select>
-                            </div>
-                            <div class="col-md-4">
-                                <label for="year">Choose a year:</label>
+                        </div>
 
-                                <select id="year" name="year">
-                                    <option value="">Choose year</option>
-                                    <option value="2017">২০১৭-১৮</option>
-                                    <option value="2018">২০১৮-১৯</option>
-                                    <option value="2019">২০১৯-২০</option>
-                                    <option value="2020" selected>২০২০-২১</option>
-                                    <option value="2021">২০২১-২২</option>
-                                    <option value="2022">২০২২-২৩</option>
-                                    <option value="2023">২০২৩-২৪</option>
-                                </select>
-                            </div>
-                            <div class="col-md-4">
-                                <input type="submit" value="Submit" id="submit" class="btn btn-success">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="row clearfix">
+                                    <div class="col-md-3">
+                                        <label >Choose a Center:</label>
+                                        <select id="center" name="center" required>
+                                            <option value="">Choose center</option>
+                                            <% if (centers.length >0){ %>
+                                                <% centers.forEach(function (center) { %>
+                                                    <option value="<%= center.id %>"><%= center.center %></option>
+                                                <% }) %>
+                                            <% } %>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <label for="month">মাস:</label>
+                                        <select id="month" name="month">
+                                            <option value="january">জানুয়ারি</option>
+                                            <option value="february">ফেব্রুয়ারি</option>
+                                            <option value="march">মার্চ</option>
+                                            <option value="april">এপ্রিল</option>
+                                            <option value="may">মে</option>
+                                            <option value="june">জুন</option>
+                                            <option value="july">জুলাই</option>
+                                            <option value="august">আগস্ট</option>
+                                            <option value="september">সেপ্টেম্বর</option>
+                                            <option value="october">অক্টোবর</option>
+                                            <option value="november">নভেম্বর</option>
+                                            <option value="december">ডিসেম্বর</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <label for="year">Choose a year:</label>
+                                        <select id="year" name="year">
+                                            <option value="">Choose year</option>
+                                            <option value="2017">২০১৭-১৮</option>
+                                            <option value="2018">২০১৮-১৯</option>
+                                            <option value="2019">২০১৯-২০</option>
+                                            <option value="2020" selected>২০২০-২১</option>
+                                            <option value="2021">২০২১-২২</option>
+                                            <option value="2022">২০২২-২৩</option>
+                                            <option value="2023">২০২৩-২৪</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <!-- Button -->                                        
+                                        <div>
+                                        <input type="submit" id="submit" name="submit" value="submit" class="btn btn-primary">   
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <!-- <div class="row mb-2">
@@ -48,6 +74,8 @@
                         <div class="table-responsive" id="output"></div>
 
                         <input type="button" id="btnExport" value="Download PDF" />
+                        <button onclick="exportToExcel('tblexportData', 'নিয়মিত শ্রমিকদের তথ্য')" class="btn btn-success">Export Table Data To Excel File</button>
+
 
                         <div id="output"></div>
         <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
@@ -59,8 +87,41 @@
 
    
 <%- include('../../../includes/footer')-%>
-<script>
+<script type="text/javascript">
+    function exportToExcel(tableID, filename = ''){
+        var downloadurl;
+        var dataFileType = 'application/vnd.ms-excel';
+        var tableSelect = document.getElementById(tableID);
+        var tableHTMLData = tableSelect.outerHTML.replace(/ /g, '%20');
         
+        // Specify file name
+        filename = filename?filename+'.xls':'export_excel_data.xls';
+        
+        // Create download link element
+        downloadurl = document.createElement("a");
+        
+        document.body.appendChild(downloadurl);
+        
+        if(navigator.msSaveOrOpenBlob){
+            var blob = new Blob(['\ufeff', tableHTMLData], {
+                type: dataFileType
+            });
+            navigator.msSaveOrOpenBlob( blob, filename);
+        }else{
+            // Create a link to the file
+            downloadurl.href = 'data:' + dataFileType + ', ' + tableHTMLData;
+        
+            // Setting the file name
+            downloadurl.download = filename;
+            
+            //triggering the function
+            downloadurl.click();
+        }
+    }
+     
+    </script>
+<script>
+                
     $(document).ready(function(){
         
       $('.dropdown a.test').on("click", function(e){
@@ -90,11 +151,12 @@
 
     $( "#content-wrapper" ).load( "no url rn",function() {
         var year = $('#year').val();
-        var center = 0;
+        var center = $('#center').val();
+        var month = $('#month').val();
         $.ajax({
             type: "POST",
-            url: "/pd/regularWorkerFilter",
-            data: {year: year, center:center},
+            url: "/pd/regularworkerFilter",
+            data: {year: year, center:center,month:month},
             datatype: "json",
             beforeSend: function() {
                 // setting a timeout
@@ -117,10 +179,11 @@
     $('#submit').on("click",function () {
         var year = $('#year').val();
         var center = $('#center').val();
+        var month = $('#month').val();
         $.ajax({
             type: "POST",
-            url: "/pd/regularWorkerFilter",
-            data: {year: year, center:center},
+            url: "/pd/regularworkerFilter",
+            data: {year: year, center:center,month: month},
             datatype: "json",
             beforeSend: function() {
                 // setting a timeout
